--- a/app/assets/stylesheets/map_canvas.css.scss
+++ b/app/assets/stylesheets/map_canvas.css.scss
@@ -2,4 +2,6 @@ html { height: 100% }
 
 body { height: 100%; margin: 0; padding: 0 }
 
-#map-canvas { height: 500px }
+#map-canvas {
+  height: 700px;
+}
