--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,7 @@
     = csrf_meta_tags
 
   %body
-    #header
-      Bootstrap navbar here
+    = render :partial => 'layouts/header'
 
     #container
       = yield
