--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,4 @@
 @import "bootstrap";
-body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 #header {
@@ -18,4 +17,8 @@ body { padding-top: 60px; }
 body {
   position:relative;
   top: 40px;
+}
+
+#map-canvas img {
+max-width: none;
 }
