--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,9 @@
   %body
     = render :partial => 'layouts/header'
 
+    - flash.each do |name, msg|
+      = content_tag :div, msg, id: "flash_#{name}"
+
     #container
       = yield
 
