--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,12 +2,13 @@
   %div{:class => "navbar"}
     %div{:class => "navbar-inner"}
       %ul{ :class => "nav"}
+        %li= link_to "Project Reboot", root_path
         - if user_signed_in?
           %li
             Logged in as
             %strong= current_user.email
-          %li= link_to "Edit profile", edit_user_registration_path |
+          %li= link_to "Edit profile", edit_user_registration_path
           %li= link_to "Logout", destroy_user_session_path, method: :delete
         - else
-          %li= link_to "Sign up", new_user_registration_path |
+          %li= link_to "Sign up", new_user_registration_path
           %li= link_to "Login", new_user_session_path
