Add CPR checkbox to sign up form

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -13,5 +13,8 @@
     = f.label :password_confirmation
     %br/
     = f.password_field :password_confirmation
+  %div
+    = f.check_box :cpr
+    = f.label :cpr, "I know CPR!"
   %div= f.submit "Sign up"
 = render "devise/shared/links"
