change cpr column to knows_cpr

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -14,7 +14,7 @@
     %br/
     = f.password_field :password_confirmation
   %div
-    = f.check_box :cpr
-    = f.label :cpr, "I know CPR!"
+    = f.check_box :knows_cpr
+    = f.label :knows_cpr, "I know CPR!"
   %div= f.submit "Sign up"
 = render "devise/shared/links"
